--- a/app/src/css/responsive.css
+++ b/app/src/css/responsive.css
@@ -5,3 +5,69 @@
         margin-right: auto;
     }
 }
+
+@media only screen and (min-width :768px) {
+    .container{
+        width: 720px;
+    }
+    .navbar__header{
+        float:left;
+    }
+    .navbar__menu{
+        display: inline-block;
+    }
+    .header__info{
+        padding: 150px 0;
+    }
+    .header__title{
+        font-size: 2.3rem;
+    }
+    .header__description{
+        font-size: 1.5em;
+    }
+    .skill__list{
+        width: 640px;
+    }
+    .portfolio__list{
+        text-align: center;
+        width: 100%;
+    }
+    .portfolio__item{
+        width: 300px;
+        display: inline-block;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .contact__form{
+        width: 640px;
+    }
+}
+
+@media only screen and (min-width : 992px) {
+    .container, .about-me__history{
+        width: 940px;
+    }
+    .about-me__history{
+        width: 940px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .skill__list{
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width : 1200px) {
+    .container{
+        width: 1100px;
+    }
+    .portfolio__item{
+        width: 240px;
+    }
+    .header__info{
+        padding: 150px 0;
+    }
+    .header__title{
+        font-size: 3rem;
+    }
+}
