--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -4,8 +4,8 @@
     padding-right: 15px;
     margin-right: auto;
     margin-left: auto;
+    overflow: hidden;
 }
-
 
 /* ### General Styles ### */
 body{
@@ -30,22 +30,23 @@ body{
     background-image: url('../images/header_bg.jpg');
     background-size: cover;
     background-position: top center;
-    height: 400px;
     color: rgb(255, 255, 255);
 }
-.header__title, .header__description{
+.header__info{
     text-align: center;
     font-family: 'Exo 2', sans-serif;
+    padding: 110px 0;
 }
 
 .header__title{
     color: rgb(255, 255, 255);
-    margin-top: 110px;
+    margin: 0 0 15px 0;
     text-shadow: 0px 0px 7px rgb(21, 32, 72);
     font-weight: 700;
     font-size: 1.8rem;
 }
 .header__description{
+    margin:0;
 }
 
 /* ### Navbar ### */
@@ -59,11 +60,31 @@ body{
 }
 .navbar__menu{
     display: none;
+    float: right;
+    margin:0;
+}
+.navbar__menu li{
+    display: inline-block; 
+}
+.navbar__menu li:hover{
+    background-color: rgb(15, 187, 255);
+}
+.navbar__menu li a:hover{
+    color: rgb(0, 0, 0);
+}
+.navbar__menu li a{
+    text-decoration: none;
+    color: rgb(250, 250, 250);
+    display: block;
+    padding: 0 15px;
+    line-height: 70px;
+    text-transform: uppercase;
+    font-size: .9rem;
 }
 
 .navbar__brand{
     margin:0;
-    
+    padding: 0 15px;
 }
 .navbar__brand a{
     color: rgb(255, 255, 255);
@@ -79,11 +100,12 @@ body{
 
 .section{
     overflow: hidden;
-    padding-top: 2rem;
+    padding-top: 3rem;
+    padding-bottom: 1rem;
 }
 
 .section__header{
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
     font-family: 'Exo 2', sans-serif;
     text-align: center;
 }
@@ -103,8 +125,11 @@ body{
 .about-me{
     text-align: center;
 }
-
+.about-me .section__header{
+    margin-bottom: 1.5rem;
+}
 .about-me__history{
+    margin: 0;
     line-height: 1.4;
     color: rgb(242, 241, 239);
     font-size: 1.2rem;
@@ -138,11 +163,13 @@ body{
     list-style: none;
     padding-left: 0;
     text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 .skill__box{
     display: inline-block;
     padding: 0 10px;
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
 }
 .skill__title{
     font-size: .7rem;
@@ -159,17 +186,19 @@ body{
     -webkit-box-shadow: 0px 0px 16px 0px rgba(163,161,163,1);
     -moz-box-shadow: 0px 0px 16px 0px rgba(163,161,163,1);
     box-shadow: 0px 0px 16px 0px rgba(163,161,163,1);
-    margin-bottom: 30px;
+    margin-bottom: 2rem;
 }
 .portfolio__item__thumb{
     width: 100%;
 }
-.portfolio__item__client{
+.portfolio__item__client, .portfolio__item__title{
     margin: 0;
+    text-align: left;
+}
+.portfolio__item__client{
     padding: 10px 15px 3px;
 }
 .portfolio__item__title{
-    margin: 0;
     padding: 0 15px 12px;
 }
 
